Fix col spacing

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -107,13 +107,13 @@ a[href].row-item:hover {
   width: 100%;
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 30em) and (max-width: 60em) {
   .project-wrapper {
     width: 50%;
   }
   .project-wrapper {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
+    padding-left: 0.65rem;
+    padding-right: 0.65rem;
   }
   .project-wrapper:nth-child(2n) {
     padding-right: 0;
@@ -126,15 +126,15 @@ a[href].row-item:hover {
   .project-wrapper {
     width: 33.3%;
   }
+  .project-wrapper {
+    padding-left: 0.65rem;
+    padding-right: 0.65rem;
+  }
   .project-wrapper:nth-child(3n) {
     padding-right: 0;
   }
   .project-wrapper:nth-child(3n + 1) {
     padding-left: 0;
-  }
-  .project-wrapper {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
   }
 }
 
